# burn

./: Cargo.toml
burn/: Cargo.toml
burn-train/: Cargo.toml
crates/burn/: Cargo.toml
crates/burn-autodiff/src/runtime/: client.rs  mspc.rs
crates/burn-common/: Cargo.toml
crates/burn-common/src/: lib.rs  util.rs
crates/burn-core/: Cargo.toml
crates/burn-core/src/module/: base.rs
crates/burn-train/: Cargo.toml
crates/burn-train/src/learner/: base.rs  builder.rs
crates/burn-train/src/metric/: mod.rs
crates/burn-train/src/metric/processor/: mod.rs
crates/burn-train/src/metric/store/: client.rs
examples/train-web/train/: Cargo.toml
examples/train-web/train/src/: data.rs  model.rs  train.rs
