[package]
authors = ["Dilshod Tadjibaev (@antimora)"]
categories = []
description = "Common crate for the Burn framework"
edition.workspace = true
keywords = []
license.workspace = true
name = "burn-common"
readme.workspace = true
repository = "https://github.com/tracel-ai/burn/tree/main/crates/burn-common"
documentation = "https://docs.rs/burn-common"
version.workspace = true

[features]
default = ["std", "cubecl-common/default"]
std = ["cubecl-common/std"]
doc = ["default"]
network = ["dep:indicatif", "dep:reqwest", "dep:tokio"]
browser = ["js-sys", "web-sys", "wasm-bindgen", "wasm-bindgen-rayon", "rayon"]
rayon = ["dep:rayon"]

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { workspace = true, features = ["js"] }
web-time = { version = "1.1.0" }

[dependencies]
# browser dependencies
js-sys = { version = "0.3.64", optional = true }
web-sys = { version = "0.3.64", optional = true, features = [
  "Worker",
  "WorkerOptions",
  "WorkerType",
  "MessageEvent",
  "ErrorEvent",
] }
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-rayon = { version = "1.3.0", optional = true }

# ** Please make sure all dependencies support no_std when std is disabled **

rand = { workspace = true }
spin = { workspace = true }       # using in place of use std::sync::Mutex;          
uuid = { workspace = true }
derive-new = { workspace = true }
serde = { workspace = true }

# Network downloader
indicatif = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

# Parallel
rayon = { workspace = true, optional = true }
cubecl-common = { workspace = true, default-features = false }

[dev-dependencies]
dashmap = { workspace = true }

[package.metadata.docs.rs]
features = ["doc"]
rustdoc-args = ["--cfg", "docsrs"]
