[package]
authors = ["nathanielsimard <nathaniel.simard.42@gmail.com>"]
categories = ["science"]
description = "Training crate for the Burn framework"
edition.workspace = true
keywords = ["deep-learning", "machine-learning", "tensor", "pytorch", "ndarray"]
license.workspace = true
name = "burn-train"
readme.workspace = true
repository = "https://github.com/tracel-ai/burn/tree/main/burn-train"
version.workspace = true

[features]
default = ["metrics", "tui", "burn-core/default", "burn-core/dataset"]
doc = ["default"]
metrics = ["nvml-wrapper", "sysinfo", "systemstat"]
tui = ["ratatui", "crossterm"]
browser = [
  "js-sys",
  "web-sys",
  "wasm-bindgen",
  "wasm-bindgen-rayon",
  "rayon",
  "burn-core/std",
]

[dependencies]
burn-core = { path = "../burn-core", version = "0.13.0", default-features = false }

log = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
tracing-core = { workspace = true }

# Metrics
nvml-wrapper = { workspace = true, optional = true }
sysinfo = { workspace = true, optional = true }
systemstat = { workspace = true, optional = true }

# Text UI
ratatui = { workspace = true, optional = true, features = ["all-widgets"] }
crossterm = { workspace = true, optional = true }

# Utilities
derive-new = { workspace = true }
serde = { workspace = true, features = ["std", "derive"] }

js-sys = { version = "0.3.64", optional = true }
web-sys = { version = "0.3.64", optional = true, features = [
  "Worker",
  "WorkerOptions",
  "WorkerType",
  "MessageEvent",
  "ErrorEvent",
] }
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-rayon = { version = "1.0.3", optional = true }
rayon = { workspace = true, optional = true }

[dev-dependencies]
burn-ndarray = { path = "../burn-ndarray", version = "0.13.0" }

[package.metadata.docs.rs]
features = ["doc"]
